# H5_conversion

./: H5_conversion.ipynb  H5_conversion_GUI.py  H5_conversion_GUI_v2.py  H5_conversion_GUI_v3.py  H5_conversion_Quadro_insitu_v3.ipynb  H5_conversion_Quadro_insitu_v3_old.ipynb  H5_conversion_Quadro_insitu_v4.ipynb  H5_conversion_Quadro_v3.ipynb  H5_conversion_v2.ipynb  Mean_300_FFMean_1e6.tif
.claude/: settings.local.json
H5_conversion_v2/: .gitignore  README.md  diagnose_windows.bat  launch_mac.command  launch_mac.sh  launch_windows.bat  launch_windows.vbs  launcher_inner.bat  pyproject.toml  run.py  smoke_test.py
H5_conversion_v2/src/h5conv/: __init__.py  core.py  gui.py
